<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_koleksi"
        android:icon="@drawable/nav_view_koleksi"
        android:title="@string/koleksi"
        android:visible="true"/>
    <item
        android:id="@+id/btn_kuis"
        android:icon="@drawable/nav_view_help"
        android:title="@string/kuis"
        android:visible="true"/>
    <item
        android:id="@+id/btn_beranda"
        android:icon="@drawable/nav_view_beranda"
        android:title="@string/beranda"
        android:visible="true"/>
    <item
        android:id="@+id/btn_konsultan"
        android:icon="@drawable/nav_view_konsultan"
        android:title="@string/konsultan"
        android:visible="true"/>
    <item
        android:id="@+id/btn_profil"
        android:icon="@drawable/nav_view_akun"
        android:title="@string/profil"
        android:visible="true"/>
</menu>