<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bglogin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/id_icon_app"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/icon_app"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk_ke_akun_saya"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="16dp"
            android:hint="@string/username"
            android:background="@drawable/bginput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="16dp"
            android:hint="@string/password"
            android:background="@drawable/bginput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:maxLines="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/log_in_with_facebook"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/lupa_password"
                android:gravity="end"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/masuk"
            android:textSize="20sp"
            android:background="@drawable/bgbtn"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/daftar"
            android:textSize="20sp"
            android:background="@drawable/bgbtn"
            android:layout_marginHorizontal="50dp"/>

    </LinearLayout>
</RelativeLayout>