<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/bgmenu">
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="fragment beranda"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:scaleType="fitStart"
                android:src="@drawable/icon_app"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:scaleType="fitEnd"
                android:src="@drawable/info"/>
        </LinearLayout>

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingTop="10dp"
            android:queryHint="Cari Disini..."
            android:background="@drawable/bginput" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/beranda_pic1"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bioskop_indonesia_petualangan_ujang"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/beranda_pic3"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kisah_kancil_dan_buaya"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/beranda_pic2"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ali_annisa_aku_jadi_anak_mandiri"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/beranda_pic4"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Edukasi Anak tentang Covid-19"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>